--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,10 @@ dependencies:
 
   qr_flutter: ^4.1.0
   flutter_qr_reader_plus: ^1.0.6
+
   brotli: ^0.6.0
+  zstandard: ^1.3.27
+
   win32audio: ^1.3.1
   vclibs: ^0.1.3
 
