--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   permission_handler: ^12.0.0+1
   flutter_toastr: ^1.0.3
   share_plus: ^10.1.4
-  flutter_js: ^0.8.3
+  flutter_js: 0.8.2
   flutter_code_editor:
     git:
       url: https://github.com/wanghongenpin/flutter-code-editor.git
