search highlight text

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,5 +1,5 @@
 name: Bug report
-about: Create reports to help us improve
+description: Create reports to help us improve
 labels: bug
 body:
   - type: dropdown
