--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   macos_window_utils: ^1.9.0
   win32audio: ^1.3.1
   vclibs: ^0.1.3
+  scrollable_positioned_list_nic: ^0.0.2
 
 dev_dependencies:
   flutter_test:
