Refactor image picking to use FilePicker and remove deprecated permissions

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,20 @@
     <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"
         tools:ignore="QueryAllPackagesPermission" />
 
+    <!-- Declare media/storage permissions. These are required if your app or
+         plugins directly read media files. You still need to request these at
+         runtime on Android (and on Android 13+ use the READ_MEDIA_* permissions).
+         If you prefer to avoid declaring sensitive permissions, use the system
+         picker / SAF which doesn't require these permissions. -->
+    <!-- These permissions are removed to comply with Google Play's "Photos and videos" policy.
+         Use the system photo picker / SAF to avoid requesting broad media access. -->
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" tools:node="remove" />
+    <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" tools:node="remove" />
+    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" tools:node="remove" />
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" tools:node="remove" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" tools:node="remove" />
+
     <application
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
@@ -42,7 +56,7 @@
             android:exported="true"
             android:permission="android.permission.BIND_VPN_SERVICE">
             <intent-filter>
-                <action android:name="andorid.net.VpnService" />
+                <action android:name="android.net.VpnService" />
             </intent-filter>
         </service>
 
